--- a/Login.html
+++ b/Login.html
@@ -5,24 +5,35 @@
 
 <title>Kiến không ngủ</title>
     <link rel="icon" href="Images_animals/Logo_wed.png" type="image/x-icon">
-<link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="table.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
 <div class="login-container">
-  <h2>Đăng nhập</h2>
-  <form action="#">
-    <div class="input-group">
-      <label for="username">Tên đăng nhập:</label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div class="input-group">
-      <label for="password">Mật khẩu:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Đăng nhập</button>
-  </form>
-</div>
+  
+  <div class="container mt-3">
+    <h2>Đăng nhập</h2>
+    <form action="/action_page.php">
+      <div class="mb-3 mt-3">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      </div>
+      <div class="mb-3">
+        <label for="pwd">Mật khẩu:</label>
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+      </div>
+      <div class="form-check mb-3">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" name="remember"> Nhớ mật khẩu
+        </label>
+      </div>
+      <a href="#">Quên mật khẩu</a>
+      <button type="submit" class="btn btn-primary">Đăng nhặp</button>
+    </form>
+  </div>
+  
 
 </body>
 </html>
