--- a/Ants.html
+++ b/Ants.html
@@ -25,7 +25,7 @@
     
     <div class="center">
     <img src="Images_animals/Logo_wed.png" alt="Logo" width="300" height="300">
-    <a href="Home_page.html"><h1>KIẾN KHÔNG NGỦ</h1></a>
+    <a href="index.html"><h1>KIẾN KHÔNG NGỦ</h1></a>
     </div>
     <div class="font_">
     <p>Các bạn tại sao trang wed lại có tên là "Kiến không ngủ" không?.</p>
