--- a/Ho_tro.html
+++ b/Ho_tro.html
@@ -22,5 +22,8 @@
             <p>Kho ảnh là nơi đề xuất tìm kiếm cho bạn</p>
        
     </div>
+    <div class="text">
+        <a href="index.html">Trang chủ</a>
+    </div>
 </body>
 </html>
