--- a/LH.html
+++ b/LH.html
@@ -19,5 +19,8 @@
         <h2>Website: www.hungproviptvu.com</h2>
         <h2>Facebook: hungproviptvu</h2>
     </div>
+    <div>
+        <a href="index.html">Trang chủ</a>
+    </div>
 </body>
 </html>
