--- a/hay.html
+++ b/hay.html
@@ -30,7 +30,7 @@
 
        <p> Năm 2016, các nhà nghiên cứu Hàn Quốc đã bắt đầu tiến hành nhân bản hươu xạ nhằm cứu giúp loài thú này khỏi thảm họa tuyệt chủng</p>
         <div class="tt">
-       <a href="Home_page.html">Trang chủ</a>
+       <a href="index.html">Trang chủ</a>
        </div>
     </body>
 </html>
