--- a/kho_anh.html
+++ b/kho_anh.html
@@ -28,7 +28,7 @@
         <div class="info-box"></div>
     </div>
     <div class="tt1">
-        <a href="Home_page.html">Trang chủ</a>
+        <a href="index.html">Trang chủ</a>
     </div >
     <script src="kho_anh.js"></script>
 </body>
