--- a/video.html
+++ b/video.html
@@ -21,7 +21,7 @@
       </div>
       <div class="text">
       <p>Nguồn : Tổ chức Bảo vệ Động vật hoang dã WAR</p>
-        <a href="Home_page.html"><h1>Trang chủ</h1></a>
+        <a href="index.html"><h1>Trang chủ</h1></a>
         </div>
 </body>
 </html>
